--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/mdx": "^4.3.10",
     "@astrojs/sitemap": "^3.6.0",
     "astro": "^5.15.8",
+    "leaflet": "^1.9.4",
     "sharp": "^0.34.5"
   }
 }
